--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 <script src="jquery.min.js"></script>
-<script>setTimeout(function(){self.location="http://139.162.100.152"},1000)</script>
+<script>setTimeout(function(){self.location="http://github.com"},1000)</script>
 <meta charset="utf-8"><title>跳</title>
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,minimum-scale=1,maximum-scale=1,minimal-ui,viewport-fit=cover">
 <meta name="format-detection" content="telephone=no">
@@ -15,7 +15,7 @@
 <meta name="aweme:image" content="https://www.jcchem.com/dm_240.jpg">
 <meta property="aweme:image:width" content="750">
 <meta property="aweme:image:height" content="1334">
-<meta name="aweme:url" content="http://139.162.100.152">
+<meta name="aweme:url" content="http://github.com">
 <meta name="aweme:qrcode" content="">
   
 </head>
